[gd_scene format=3 uid="uid://jb5i1crm3ssq"]

[ext_resource type="Script" uid="uid://ce4ekbmeanusx" path="res://demo/demo.gd" id="1_d6po2"]

[node name="Demo" type="Control" unique_id=569081941]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6po2")

[node name="Margin" type="MarginContainer" parent="." unique_id=3107329]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="RootColumn" type="VBoxContainer" parent="Margin" unique_id=1726955827]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Margin/RootColumn" unique_id=1858987226]
layout_mode = 2
text = "SimpleWebRTC Demo"

[node name="SignalingRow" type="HBoxContainer" parent="Margin/RootColumn" unique_id=1383126907]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SignalingUrlLabel" type="Label" parent="Margin/RootColumn/SignalingRow" unique_id=1680626642]
layout_mode = 2
text = "Signaling URL"

[node name="SignalingUrlInput" type="LineEdit" parent="Margin/RootColumn/SignalingRow" unique_id=747065948]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "ws://127.0.0.1:8000/ws"

[node name="RoomRow" type="HBoxContainer" parent="Margin/RootColumn" unique_id=1071589194]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RoomIdLabel" type="Label" parent="Margin/RootColumn/RoomRow" unique_id=1797049243]
layout_mode = 2
text = "Room"

[node name="RoomIdInput" type="LineEdit" parent="Margin/RootColumn/RoomRow" unique_id=1500678308]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "example-room"

[node name="TopologyLabel" type="Label" parent="Margin/RootColumn/RoomRow" unique_id=199586359]
layout_mode = 2
text = "Topology"

[node name="TopologyOption" type="OptionButton" parent="Margin/RootColumn/RoomRow" unique_id=995162863]
unique_name_in_owner = true
layout_mode = 2

[node name="CapacityLabel" type="Label" parent="Margin/RootColumn/RoomRow" unique_id=93124164]
layout_mode = 2
text = "Capacity"

[node name="CapacitySpin" type="SpinBox" parent="Margin/RootColumn/RoomRow" unique_id=192948301]
unique_name_in_owner = true
layout_mode = 2
min_value = 2.0
max_value = 16.0
value = 2.0

[node name="ButtonsRow" type="HBoxContainer" parent="Margin/RootColumn" unique_id=2032552297]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RefreshButton" type="Button" parent="Margin/RootColumn/ButtonsRow" unique_id=1588085199]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh Lobbies"

[node name="HostButton" type="Button" parent="Margin/RootColumn/ButtonsRow" unique_id=1702820545]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="Margin/RootColumn/ButtonsRow" unique_id=1485074971]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="LeaveButton" type="Button" parent="Margin/RootColumn/ButtonsRow" unique_id=35491338]
unique_name_in_owner = true
layout_mode = 2
text = "Leave"

[node name="StatusLabel" type="Label" parent="Margin/RootColumn" unique_id=634662214]
unique_name_in_owner = true
layout_mode = 2
text = "Ready"

[node name="PanelsRow" type="HSplitContainer" parent="Margin/RootColumn" unique_id=13398227]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyList" type="ItemList" parent="Margin/RootColumn/PanelsRow" unique_id=1923834043]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogOutput" type="RichTextLabel" parent="Margin/RootColumn/PanelsRow" unique_id=667033662]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
